# Xander-Master

./: .gitignore  Cargo.toml  NOTES.md  README.md  test.ipynb  test.py
ai/: character.schema.json  test.json  test.py
crates/d20/: Cargo.toml
crates/d20/src/: dynx.rs  eval.rs  lib.rs  parser.rs  pretty.rs  provider.rs  utils.rs
crates/dynx/: Cargo.toml
crates/dynx/src/: lib.rs
crates/dynx_macros/: Cargo.toml
crates/xander/: Cargo.toml  test.dump
crates/xander/src/: lib.rs  utils.rs
crates/xander/src/content/: mod.rs
crates/xander/src/engine/: mod.rs
crates/xander/src/engine/game/: mod.rs
crates/xander/src/engine/game/combat/: affiliation.rs  arena.rs  attack.rs  mod.rs  reaction.rs  turn.rs  utils.rs  view.rs  win.rs
crates/xander/src/engine/game/combat/action/: attack.rs  dash.rs  disengage.rs  dodge.rs  mod.rs
crates/xander/src/engine/game/creature/: character.rs  marker.rs  me.rs  mod.rs  monster.rs  proficiencies.rs  size.rs  stat_block.rs
crates/xander/src/engine/game/creature/actions/: mod.rs  reaction.rs
crates/xander/src/engine/game/flow/: mod.rs
crates/xander/src/engine/game/health/: current_hp.rs  damage.rs  death.rs  hit_die.rs  max_hp.rs  mod.rs  riv.rs  temp_hp.rs
crates/xander/src/engine/game/magic/: aoe.rs  component.rs  duration.rs  level.rs  mod.rs  range.rs  school.rs  targeting.rs
crates/xander/src/engine/game/measure/: currency.rs  mod.rs  time.rs
crates/xander/src/engine/game/stats/: ability.rs  mod.rs  proficiency.rs  skill.rs
crates/xander/src/engine/game/stats/d20_test/: attack_roll.rs  check.rs  mod.rs  save.rs  utils.rs
crates/xander/src/engine/io/: agent.rs  mod.rs  roller.rs
crates/xander/src/engine/json/: combatant.rs  creature.rs  game.rs  mod.rs  stats.rs  utils.rs
crates/xander/src/engine/magic/: component.rs  duration.rs  mod.rs  range.rs  school.rs  targeting.rs
crates/xander/src/engine/measure/: currency.rs  mod.rs
crates/xander/src/prelude/: event.rs  mod.rs  proficiency.rs
crates/xander_py/: Cargo.toml  pyproject.toml
crates/xander_py/python/xander/: __init__.py  pyutils.py  xander.pyi
crates/xander_py/python/xander/ai/: __init__.py  env.py  opponents.py  utils.py
crates/xander_py/python/xander/ai/wrappers/: sparse.py
crates/xander_py/python/xander/cli/: __init__.py  schema.py
crates/xander_py/python/xander/xander/: __init__.pyi  consts.pyi  schema.pyi  templating.pyi
crates/xander_py/src/: lib.rs
crates/xander_py/src/api/: attack.rs  consts.rs  dice.rs  game.rs  health.rs  mod.rs  reaction.rs  schema.rs  templating.rs  turn.rs  utils.rs
crates/xander_py/src/py/: coroutine.rs  io.rs  mod.rs  utils.rs
crates/xander_runtime/: Cargo.toml
crates/xander_runtime/src/: __macros.rs  lib.rs  macros.rs
crates/xander_runtime/src/dynx/: archiving.rs  cells.rs  de.rs  mod.rs  weak.rs
crates/xander_runtime/src/flow/: decision.rs  dispatcher.rs  event.rs  io.rs  mod.rs  ruling.rs
crates/xander_runtime/src/lived/: cell.rs  list.rs  mod.rs  provided.rs
crates/xander_runtime/src/ui/: mod.rs
examples/: requirements.txt
examples/ai/: train.py
examples/play/: with_nothing.py  with_rl.py
(+41 files in other folders)
