[package]
name = "xander_d20"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chumsky = { version = "0.12.0", features = ["nightly"] }
rand = { version = "0.10.1", optional = true }
xander_runtime = { path = "../xander_runtime" }
inventory = { workspace = true }

[features]
rand = ["dep:rand"]
default = ["rand"]

[lints]
workspace = true
