[build-system]
requires = ["maturin>=1.13,<2.0"]
build-backend = "maturin"

[tool.maturin]
python-source = "python"
module-name = "xander.xander"

[tool.ruff]
extend-exclude = ["python/xander/__init__.py"]

[project]
name = "xander"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = [
    "typer==0.25.1",
    "gymnasium==1.3.0",
    "numpy>=2.4"
]

[project.scripts]
xander = "xander.cli:app"
