[package]
name = "xander_runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
pin-project = "1.1.10"
downcast-rs.workspace = true
rkyv.workspace = true
bytecheck.workspace = true
dynx = { path = "../dynx" }
thiserror.workspace = true
smol.workspace = true
inventory.workspace = true


[lints]
workspace = true
